feat: add canonical artist credits
